Iniciar um CursorLoader para ler os livros em background

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,9 +7,9 @@
 
     <fragment
         android:id="@+id/FirstFragment"
-        android:name="pt.ipg.covid.ListaMedicosFragment"
+        android:name="pt.ipg.covid.ListaUtentesFragment"
         android:label="@string/first_fragment_label"
-        tools:layout="@layout/fragment_lista_medicos">
+        tools:layout="@layout/fragment_lista_utentes">
 
         <action
             android:id="@+id/action_FirstFragment_to_SecondFragment"
