--- a/app/src/main/res/layout/fragment_lista_utentes.xml
+++ b/app/src/main/res/layout/fragment_lista_utentes.xml
@@ -7,6 +7,8 @@
     tools:context=".ListaUtentesFragment">
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerViewUtentes"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:layout_margin="@dimen/margem_ecran" />
 </FrameLayout>
