--- a/app/src/main/res/menu/menu_lista_utentes.xml
+++ b/app/src/main/res/menu/menu_lista_utentes.xml
@@ -3,14 +3,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="pt.ipg.livros.MainActivity">
     <item
+        android:id="@+id/action_novo_utente"
         android:icon="@drawable/ic_baseline_add_24"
         android:title="@string/novo_utente"
         app:showAsAction="ifRoom" />
     <item
+        android:id="@+id/action_alterar_utente"
         android:icon="@android:drawable/ic_menu_edit"
         android:title="@string/alterar_utente"
         app:showAsAction="ifRoom" />
     <item
+        android:id="@+id/action_eliminar_utente"
         android:icon="@android:drawable/ic_menu_delete"
         android:title="@string/eliminar_utente"
         app:showAsAction="ifRoom" />
