--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -17,9 +17,10 @@
     </fragment>
     <fragment
         android:id="@+id/SecondFragment"
-        android:name="pt.ipg.covid.SecondFragment"
+        android:name="pt.ipg.utentes.NovoUtenteFragment"
+
         android:label="@string/second_fragment_label"
-        tools:layout="@layout/fragment_second">
+        tools:layout="@layout/fragment_novo_utente">
 
         <action
             android:id="@+id/action_SecondFragment_to_FirstFragment"
